--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -15,7 +15,7 @@
             <div class="container">
                 <form name="addCards">
                     <div class="form-row" style="color:white">
-                        <div class="form=group col-md-3">
+                        <div class="form-group col-md-3">
                             <label for="title">Title</label>
                             <input type="text" name="title" class="form form-control" maxlength="40"
                                 placeholder="Enter Title Here" required>
