--- a/templates/viewCards.html
+++ b/templates/viewCards.html
@@ -22,6 +22,14 @@
             <h5>- Instructions -</h5>
             <hr style="margin:5px">
             <p><i>Click on the card to flip it.<br>Use the Next and Previous button to change cards.</i></p>
+            <h5>- Setting -</h5>
+            <hr style="margin:5px">
+            <!-- Checked checkbox -->
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="shuffleCheck" checked/>
+                <label class="form-check-label" for="shuffleCheck">Shuffle Cards</label>
+            </div>
+            
             <input id="startButton" class="btn brownButton" type="button" value="View Flash Cards"
                 onclick="startCardView(cards);" />
         </div>
