--- a/templates/viewCards.html
+++ b/templates/viewCards.html
@@ -16,20 +16,31 @@
     <!--Card section.-->
     <div class="col-sm-8 offset-sm-2">
         <div class="whitePanel" id="introCard" style="margin-bottom:12px">
-            <h5>- Description -</h5>
-            <hr style="margin:5px">
-            <p><i>{{ cards.description }}</i></p>
-            <h5>- Instructions -</h5>
-            <hr style="margin:5px">
-            <p><i>Click on the card to flip it.<br>Use the Next and Previous button to change cards.</i></p>
-            <h5>- Setting -</h5>
-            <hr style="margin:5px">
-            <!-- Checked checkbox -->
-            <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="shuffleCheck" checked/>
-                <label class="form-check-label" for="shuffleCheck">Shuffle Cards</label>
+            <div class="row">
+                <div class="col-md-12">
+                    <h3>- Description -</h3>
+                    <hr style="margin:5px">
+                    <p style="font-size: 20px;"><i>{{ cards.description }}</i></p>
+                </div>
+                <div class="col-md-6">
+                    <h5>- Instructions -</h5>
+                    <hr style="margin:5px">
+                    <p><i>Click on the card to flip it.<br>Use the Next and Previous button to change cards.</i></p>
+                </div>
+                <div class="col-md-6">
+                    <h5>- Settings -</h5>
+                    <hr style="margin:5px">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="shuffleCheck" checked />
+                        <label class="form-check-label" for="shuffleCheck">Shuffle Cards</label>
+                    </div>
+                    <div class="form-check" style="margin-bottom:15px">
+                        <input class="form-check-input" type="checkbox" value="" id="flipCheck" />
+                        <label class="form-check-label" for="flipCheck">Flip Questions with Answers</label>
+                    </div>
+                </div>
             </div>
-            
+
             <input id="startButton" class="btn brownButton" type="button" value="View Flash Cards"
                 onclick="startCardView(cards);" />
         </div>
