--- a/templates/viewCards.html
+++ b/templates/viewCards.html
@@ -61,6 +61,9 @@
         <input id="nextButton" class="btn brownButton" style="width:100%; height: 50px; display:none" type="button"
             value="Next" onclick="nextCard();" disabled />
     </div>
+    <div class="col-md-12" id="numberButtons" style="padding:5px">
+        
+    </div>
 </div>
 
 <script src="/static/js/viewCardsScript.js"></script>
