--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,9 @@
               <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="/searchCards/" >Search</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link disabled" href="/" >About</a>
             </li>
             <li class="nav-item">
