Added Edit User button in dashboard.html.

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,7 +1,16 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h1 class="whiteTitleText text-center">Dashboard</h1>
+<!-- Title section. -->
+<div class="row">
+    <div class="col-md-8 offset-md-2">
+        <h1 class="whiteTitleText text-center">Dashboard</h1>
+    </div>
+    <div class="col-md-2 my-auto text-center">
+        <a class="btn lPinkButton" href="/editUser/" >Edit User Info</a>
+    </div>
+</div>
+
 <hr class="whiteLine" style="height:2px">
 
 <!-- Section to add a show. -->
