--- a/templates/editUser.html
+++ b/templates/editUser.html
@@ -49,17 +49,25 @@
                             <h5>Password</h5>
                             <hr style="margin:2px">
                             <p><i>-Hidden-</i></p>
-                            <!--
                             <a data-toggle="collapse" href="#password">Change Password</a>
-                            <div class="collapse" id="password" data-parent="#accordion">
-                                <label for="password">Password</label>
-                                <input type="password" name="password" class="field form-control" maxlength="32"
-                                    placeholder="Enter Password Here" required>
-                            </div>-->
+                            <div id="password" class="collapse" data-parent="#accordion">
+                                <form name="editPassword">
+                                    <label for="password">Current Password</label>
+                                    <input type="password" name="password" class="field form-control" maxlength="32"
+                                        placeholder="Enter Password Here" required>
+                                    <label for="newPassword">New Password</label>
+                                    <input type="password" name="newPassword" class="field form-control" maxlength="32"
+                                        placeholder="Enter Password Here" required>
+                                    <label for="newPasswordAgain">Re-enter New Password</label>
+                                    <input type="password" name="newPasswordAgain" class="field form-control"
+                                        maxlength="32" placeholder="Enter Password Here" required>
+                                    <input type="submit" value="Enter" class="btn brownButton" style="margin-top: 10px">
+                                    <p class="error error--hidden" style="color:red"></p>
+                                </form>
+                            </div>
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
     </div>
