--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -58,7 +58,8 @@
 <!-- Section to see and edit users flashcard sets-->
 <div class="container" style="margin-top:10px;">
     <div class="whitePanel text-center">
-        <h3>Your Flash Cards</h3>
+        <h3 style="margin-bottom:0px">Your Flash Cards</h3>
+        <h5 style="margin:0px">{{cardsLists|length}}/50</h5>
         <hr style="margin:5px">
         <div class="row">
             {% for cards in cardsLists %}
