Added limit check for cards in models.py, Display of total cards,  in editCardsList.htmlnd error display in scripts.js when making boxes.

--- a/templates/editCardsList.html
+++ b/templates/editCardsList.html
@@ -89,7 +89,8 @@
 
 <!-- Section to edit individual cards-->
 <div class="whitePanel text-center" style="padding:10px; margin-bottom: 10px;">
-    <h3>Cards Edit</h3>
+    <h3 style="margin-bottom:0px">Cards Edit</h3>
+    <h5 style="margin:0px">{{cards.cards|length}}/150</h5>
     <div class="container">
         <table class="table table-striped">
             <thead>
