Added re-enter password when signing up. its functionality in user/models.py and its display in home.html.

--- a/templates/home.html
+++ b/templates/home.html
@@ -36,7 +36,7 @@
                             <input type="password" name="password" class="field form-control centerShortField"
                                 maxlength="32" placeholder="Enter Password" required>
                             <input type="submit" value="Log In" class="brownButton btn" style="margin-top: 10px;">
-                            <p class="error error--hidden"></p>
+                            <p class="error error--hidden" style="color:red"></p>
                         </form>
                     </div>
                 </div>
@@ -62,12 +62,11 @@
                             <label for="password">Password</label>
                             <input type="password" name="password" class="field form-control centerShortField"
                                 maxlength="32" placeholder="Enter Password Here" required>
-                            <!--
-                                <label for="password2">Re-Enter Password</label>
-                                <input type="password" name="password2" class="field form-control centerShortField" maxlength="32" placeholder="Enter Password Here" required>
-                                <div style="padding-top: 10px;">-->
+                            <label for="passwordAgain">Re-Enter Password</label>
+                            <input type="password" name="passwordAgain" class="field form-control centerShortField" maxlength="32"
+                                placeholder="Enter Again Password Here" required>
                             <input type="submit" value="Sign Up" class="brownButton btn" style="margin-top:10px">
-                            <p class="error error--hidden"></p>
+                            <p class="error error--hidden" style="color:red"></p>
                         </form>
                     </div>
                 </div>
