--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -75,10 +75,9 @@
                     <p style="margin:1px; font-style: italic;">-Description-</p>
                     <p style="line-height:90%">{{cards.description}}</p>
                     <div>
-                        <a class="btn brownButton"
-                            href="/viewCards/{{ cards['owner_name'] }}/{{cards['title']}}">View</a>
-                        <a class="btn brownButton" href="/editCardsList/{{cards['title']}}">Edit</a>
-                        <a class="btn brownButton" href="/user/deleteCards/{{cards['title']}}">-</a>
+                        <a class="btn brownButton" href="/viewCards/{{cards.owner_name}}/{{cards.title}}">View</a>
+                        <a class="btn brownButton" href="/editCardsList/{{cards.title}}">Edit</a>
+                        <input class="btn brownButton" type="button" value="-" onclick="deleteCardsListConfirmation('{{cards.title}}');" />
                     </div>
                 </div>
             </div>
