Added word break in some text in dashboard.html.

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -73,7 +73,7 @@
                     </h5>
                     <hr class="brownLine" style="margin:1px">
                     <p style="margin:1px; font-style: italic;">-Description-</p>
-                    <p style="line-height:90%">{{cards.description}}</p>
+                    <p style="line-height:90%; word-wrap: break-word;">{{cards.description}}</p>
                     <div>
                         <a class="btn brownButton" href="/viewCards/{{cards.owner_name}}/{{cards.title}}">View</a>
                         <a class="btn brownButton" href="/editCardsList/{{cards.title}}">Edit</a>
