--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
               <a class="nav-link" href="/searchCards/" >Search</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="/" >About</a>
+              <a class="nav-link" href="/about/" >About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link disabled" href="/" >Contact</a>
