--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
               <a class="nav-link" href="/about/" >About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="/" >Contact</a>
+              <a class="nav-link" href="/contact/" >Contact</a>
             </li>
             {% if session['logged_in'] %}
             <li class="nav-item">
